# ComfyUI-WorkflowOrganizer

./: .gitignore  LICENSE  README.md  RECORDING_SCRIPT.md  __init__.py  project-comfyui-workfloworganizer.md  pyproject.toml
js/: workflowDragDrop.js
