[project]
name = "comfyui-workfloworganizer"
description = "Drag-and-drop workflow organization for the ComfyUI sidebar"
version = "0.3.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/CraftopiaStudio/ComfyUI-WorkflowOrganizer"

[tool.comfy]
PublisherId = "craftopiastudio"
DisplayName = "ComfyUI-WorkflowOrganizer"
Icon = "https://raw.githubusercontent.com/CraftopiaStudio/ComfyUI-WorkflowOrganizer/main/assets/icon.png"